Add algo to index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,8 +36,8 @@
         <div class="form-group col col-6">
             <label for="type" class="control-label">Algorithm</label>
             <select class="form-control" id="type" name="type">
-                <option value="USHAPE" selected="selected">USHAPE</option>
-                <option value="LOCAL_MAXIMUM">LOCAL_MAXIMUM</option>
+                <option value="LOCAL_MAXIMUM" selected="selected">LOCAL_MAXIMUM</option>
+                <option value="USHAPE">USHAPE</option>
             </select>
         </div>
         <div class="col col-2 form-group text-center">
@@ -53,6 +53,7 @@
             <tr>
                 <th>Array</th>
                 <th>Water units</th>
+                <th>Algorithm</th>
             </tr>
             </thead>
             <tbody id="container">
